; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/net/extr_link-config.c_link_unsigned_attribute.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/net/extr_link-config.c_link_unsigned_attribute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"Failed to query %s: %m\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"Failed to parse %s \22%s\22: %m\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"Device has %s=%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @link_unsigned_attribute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @link_unsigned_attribute(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @sd_device_get_sysattr_value(i32* %10, i8* %11, i8** %8)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @log_device_debug_errno(i32* %16, i32 %17, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %18)
  store i32 %19, i32* %4, align 4
  br label %38

20:                                               ; preds = %3
  %21 = load i8*, i8** %8, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @safe_atou(i8* %21, i32* %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %20
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 @log_device_warning_errno(i32* %27, i32 %28, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8* %29, i8* %30)
  store i32 %31, i32* %4, align 4
  br label %38

32:                                               ; preds = %20
  %33 = load i32*, i32** %5, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @log_device_debug(i32* %33, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8* %34, i32 %36)
  store i32 0, i32* %4, align 4
  br label %38

38:                                               ; preds = %32, %26, %15
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @sd_device_get_sysattr_value(i32*, i8*, i8**) #1

declare dso_local i32 @log_device_debug_errno(i32*, i32, i8*, i8*) #1

declare dso_local i32 @safe_atou(i8*, i32*) #1

declare dso_local i32 @log_device_warning_errno(i32*, i32, i8*, i8*, i8*) #1

declare dso_local i32 @log_device_debug(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
